--- a/notebooks/Test-7-20.ipynb
+++ b/notebooks/Test-7-20.ipynb
@@ -669,7 +669,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from deep_dss.utils import *"
+   ]
   }
  ],
  "metadata": {
