New notebooks, switched fields order and fixed cl loading functions

--- a/notebooks/Winning Model Robustness Tests.ipynb
+++ b/notebooks/Winning Model Robustness Tests.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "In /Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The text.latex.unicode rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
-      "In /Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The savefig.frameon rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
-      "In /Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The pgf.debug rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n",
-      "In /Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The verbose.level rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
-      "In /Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The verbose.fileo rcparam was deprecated in Matplotlib 3.1 and will be removed in 3.3.\n",
-      "/Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:521: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/Users/adiraju/opt/anaconda3/envs/deep_dss/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from deep_dss.utils import *\n",
     "from deep_dss.models import *\n",
@@ -894,6 +865,98 @@
     "plt.xlabel(\"Simulated Tracer Density (arcmin^2)\")\n",
     "plt.ylabel(\"L1 Loss on Test Set\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#sides: [1024, 512, 256, 128, 64, 32, 16, 8, 4]\n",
+      "#pixels: [262144, 65536, 16384, 4096, 1024, 256, 64, 16, 4]\n",
+      "#samples per batch: 64\n",
+      "=> #pixels per batch (input): 16,777,216\n",
+      "=> #pixels for training (input): 5,033,164,800\n",
+      "NN architecture\n",
+      "  input: M_0 = 262144\n",
+      "  layer 1: cgconv1\n",
+      "    representation: M_0 * F_1 / p_1 = 262144 * 64 / 4 = 4194304\n",
+      "    weights: F_0 * F_1 * K_1 = 2 * 64 * 5 = 640\n",
+      "    biases: F_1 = 64\n",
+      "    batch normalization\n",
+      "  layer 2: cgconv2\n",
+      "    representation: M_1 * F_2 / p_2 = 65536 * 64 / 4 = 1048576\n",
+      "    weights: F_1 * F_2 * K_2 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_2 = 64\n",
+      "    batch normalization\n",
+      "  layer 3: cgconv3\n",
+      "    representation: M_2 * F_3 / p_3 = 16384 * 64 / 4 = 262144\n",
+      "    weights: F_2 * F_3 * K_3 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_3 = 64\n",
+      "    batch normalization\n",
+      "  layer 4: cgconv4\n",
+      "    representation: M_3 * F_4 / p_4 = 4096 * 64 / 4 = 65536\n",
+      "    weights: F_3 * F_4 * K_4 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_4 = 64\n",
+      "    batch normalization\n",
+      "  layer 5: cgconv5\n",
+      "    representation: M_4 * F_5 / p_5 = 1024 * 64 / 4 = 16384\n",
+      "    weights: F_4 * F_5 * K_5 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_5 = 64\n",
+      "    batch normalization\n",
+      "  layer 6: cgconv6\n",
+      "    representation: M_5 * F_6 / p_6 = 256 * 64 / 4 = 4096\n",
+      "    weights: F_5 * F_6 * K_6 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_6 = 64\n",
+      "    batch normalization\n",
+      "  layer 7: cgconv7\n",
+      "    representation: M_6 * F_7 / p_7 = 64 * 64 / 4 = 1024\n",
+      "    weights: F_6 * F_7 * K_7 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_7 = 64\n",
+      "    batch normalization\n",
+      "  layer 8: cgconv8\n",
+      "    representation: M_7 * F_8 / p_8 = 16 * 64 / 4 = 256\n",
+      "    weights: F_7 * F_8 * K_8 = 64 * 64 * 5 = 20480\n",
+      "    biases: F_8 = 64\n",
+      "    batch normalization\n",
+      "  layer 9: fc1\n",
+      "    representation: M_9 = 1\n",
+      "    weights: M_8 * M_9 = 256 * 1 = 256\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'placeholder'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-9eb63458105a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m model = model_by_architecture(\"data1\", num_epochs=epochs1, learning_rate=lr1, input_channels=channels, nmaps=nmaps,\n\u001b[0;32m---> 12\u001b[0;31m                               order=order, exp_name=\"counts-big\", nfilters=k)\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/deep_dss-0.1.0-py3.6.egg/deep_dss/models.py\u001b[0m in \u001b[0;36mmodel_by_architecture\u001b[0;34m(architecture, verbose, path_to_checkpoints, num_epochs, learning_rate, eval_frequency, input_channels, nmaps, decay_factor, order, exp_name, nfilters)\u001b[0m\n\u001b[1;32m    516\u001b[0m                                  \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_frequency\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0meval_frequency\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    517\u001b[0m                                  \u001b[0minput_channels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_channels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnmaps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnmaps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecay_factor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdecay_factor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 518\u001b[0;31m                                  exp_name=exp_name, nfilters=nfilters))\n\u001b[0m\u001b[1;32m    519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/deepsphere-0.1.0-py3.6.egg/deepsphere/models.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, nsides, indexes, use_4, **kwargs)\u001b[0m\n\u001b[1;32m   1217\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnsides\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnsides\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpygsp_graphs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnsides\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdeepsphere\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_gsp_filters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mind_in\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mind_out\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/deepsphere-0.1.0-py3.6.egg/deepsphere/models.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, L, F, K, p, batch_norm, M, num_epochs, scheduler, optimizer, input_channel, conv, pool, activation, statistics, regularization, dropout, batch_size, eval_frequency, dir_name, profile, debug, loss)\u001b[0m\n\u001b[1;32m    558\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    559\u001b[0m         \u001b[0;31m# Build the computational graph.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 560\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    561\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    562\u001b[0m         \u001b[0;31m# show_all_variables()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/deepsphere-0.1.0-py3.6.egg/deepsphere/models.py\u001b[0m in \u001b[0;36mbuild_graph\u001b[0;34m(self, M_0)\u001b[0m\n\u001b[1;32m    258\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mph_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mM_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    259\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 260\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mph_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mM_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_channel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    261\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_loss_type\u001b[0m \u001b[0;34m==\u001b[0m\u001b[0;34m'cross_entropy'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    262\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mph_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaceholder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'labels'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'placeholder'"
+     ]
+    }
+   ],
+   "source": [
+    "config = \"ck\"\n",
+    "channels = 2\n",
+    "order = 2\n",
+    "nmaps = 20\n",
+    "k = 64\n",
+    "epochs1 = 20\n",
+    "epochs2 = 30\n",
+    "lr1 = 1e-4\n",
+    "lr2 = 1e-4\n",
+    "\n",
+    "model = model_by_architecture(\"data1\", num_epochs=epochs1, learning_rate=lr1, input_channels=channels, nmaps=nmaps,\n",
+    "                              order=order, exp_name=\"counts-big\", nfilters=k)"
    ]
   },
   {
