Created training script for SphereNN. Must modify names and such and create associated directories. No plot generation here

--- a/notebooks/SphereNN Development.ipynb
+++ b/notebooks/SphereNN Development.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,21 +84,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mkdir: ../checkpoints/spherenn/spherenn-v3-simple-noisy-fixed-kappa: File exists\n",
-      "mkdir: ../log/spherenn-v3-simple-noisy-fixed-kappa: File exists\n",
-      "mkdir: ../figures/spherenn-v3-simple-noisy-fixed-kappa: File exists\n"
+      "mkdir: ../checkpoints/spherenn/spherenn-v3-simple-noisy-fixed-gamma: File exists\n",
+      "mkdir: ../log/spherenn-v3-simple-noisy-fixed-gamma: File exists\n",
+      "mkdir: ../figures/spherenn-v3-simple-noisy-fixed-gamma: File exists\n"
      ]
     }
    ],
    "source": [
-    "config=\"k\"\n",
+    "config = \"g\"\n",
+    "channels = 2\n",
     "noiseless_m = False\n",
     "noiseless_kg = False\n",
     "rand_bias = False\n",
@@ -109,8 +110,8 @@
     "\n",
     "val_set = \"TEST\"\n",
     "\n",
-    "exp_name = \"spherenn-v3-simple-noisy-fixed-kappa\"\n",
-    "num_id = 2\n",
+    "exp_name = \"spherenn-v3-simple-noisy-fixed-gamma\"\n",
+    "num_id = 1\n",
     "checkpoint_path = \"../checkpoints/spherenn/{0}/{0}-{1}\".format(exp_name, num_id)\n",
     "checkpoint_dir = \"../checkpoints/spherenn/{0}\".format(exp_name)\n",
     "!mkdir $checkpoint_dir\n",
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,42 +149,40 @@
     "    data = split_count_and_lensing_maps_by_dataset(dataset, config=config, noiseless_m=noiseless_m,\n",
     "                                                  noiseless_kg=noiseless_kg, rand_bias=rand_bias, \n",
     "                                                  mixed_bias=mixed_bias)\n",
-    "    data[\"x\"] = np.reshape(data[\"x\"], (12*(order**2)*num_cosmos, (nside//order)**2, 1))\n",
+    "    data[\"x\"] = np.reshape(data[\"x\"], (12*(order**2)*num_cosmos, (nside//order)**2, channels))\n",
     "    data[\"y\"] = np.reshape(data[\"y\"], (12*(order**2)*num_cosmos, 1, 1))\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_model():\n",
     "    return keras.Sequential([\n",
     "        keras.Input(shape=(262144, 1)),\n",
-    "        layers.Conv1D(64, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(128, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
-    "        layers.Conv1D(1, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(64, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(128, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(256, 4, strides=4, activation='relu'),\n",
+    "        keras.layers.Conv1D(1, 4, strides=4, activation='relu'),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model_single_dataset(dataset, n_epochs=12, load_model=False, chkpt_path=None, val_data=None):\n",
     "    train_data = generate_reshaped_data(dataset)\n",
-    "    if dataset == \"Q1\":\n",
-    "        return checkpoint_path+\"-{0}\".format(dataset)\n",
     "    if val_data is None:\n",
     "        val_data = generate_reshaped_data(val_set)\n",
     "    \n",
@@ -198,14 +197,15 @@
     "                                                     monitor=\"val_loss\", save_weights_only=True, save_best_only=True, \n",
     "                                                     verbose=1, mode=\"min\")\n",
     "    \n",
-    "    model.fit(x=data[\"x\"], y=data[\"y\"], batch_size=32, epochs=n_epochs, validation_data=(val[\"x\"], val[\"y\"]),\n",
-    "         callbacks=[tensorboard_callback, cp_callback])\n",
+    "    model.fit(x=train_data[\"x\"], y=train_data[\"y\"], batch_size=32, epochs=n_epochs, \n",
+    "              validation_data=(val_data[\"x\"], val_data[\"y\"]),\n",
+    "              callbacks=[tensorboard_callback, cp_callback])\n",
     "    return checkpoint_path+\"-{0}\".format(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,34 +395,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_39\"\n",
+      "Model: \"sequential_10\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv1d_351 (Conv1D)          (None, 65536, 64)         320       \n",
+      "conv1d_90 (Conv1D)           (None, 65536, 64)         320       \n",
       "_________________________________________________________________\n",
-      "conv1d_352 (Conv1D)          (None, 16384, 128)        32896     \n",
+      "conv1d_91 (Conv1D)           (None, 16384, 128)        32896     \n",
       "_________________________________________________________________\n",
-      "conv1d_353 (Conv1D)          (None, 4096, 256)         131328    \n",
+      "conv1d_92 (Conv1D)           (None, 4096, 256)         131328    \n",
       "_________________________________________________________________\n",
-      "conv1d_354 (Conv1D)          (None, 1024, 256)         262400    \n",
+      "conv1d_93 (Conv1D)           (None, 1024, 256)         262400    \n",
       "_________________________________________________________________\n",
-      "conv1d_355 (Conv1D)          (None, 256, 256)          262400    \n",
+      "conv1d_94 (Conv1D)           (None, 256, 256)          262400    \n",
       "_________________________________________________________________\n",
-      "conv1d_356 (Conv1D)          (None, 64, 256)           262400    \n",
+      "conv1d_95 (Conv1D)           (None, 64, 256)           262400    \n",
       "_________________________________________________________________\n",
-      "conv1d_357 (Conv1D)          (None, 16, 256)           262400    \n",
+      "conv1d_96 (Conv1D)           (None, 16, 256)           262400    \n",
       "_________________________________________________________________\n",
-      "conv1d_358 (Conv1D)          (None, 4, 256)            262400    \n",
+      "conv1d_97 (Conv1D)           (None, 4, 256)            262400    \n",
       "_________________________________________________________________\n",
-      "conv1d_359 (Conv1D)          (None, 1, 1)              1025      \n",
+      "conv1d_98 (Conv1D)           (None, 1, 1)              1025      \n",
       "=================================================================\n",
       "Total params: 1,477,569\n",
       "Trainable params: 1,477,569\n",
@@ -445,43 +445,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating data for TEST!\n",
-      "Training on Q1 data:\n",
-      "Generating data for Q1!\n"
+      "Generating data for TEST!\n"
      ]
     }
    ],
    "source": [
     "train_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 330,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = build_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 331,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7fd01a8ae100>"
-      ]
-     },
-     "execution_count": 331,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.load_weights(\"../checkpoints/spherenn/spherenn-v3-simple-noisy-fixed-kappa/spherenn-v3-simple-noisy-fixed-kappa-2-Q1\")"
    ]
   },
   {
@@ -508,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_preds_vs_truths(results, \"SphereNN Estimates from Noisy Convergence\")"
+    "plot_preds_vs_truths(results, \"SphereNN Estimates from Noisy Shear\")"
    ]
   },
   {
@@ -517,7 +486,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_residuals(results, \"SphereNN Residuals from Noisy Convergence\")"
+    "plot_residuals(results, \"SphereNN Residuals from Noisy Shear\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_losses(results)"
    ]
   },
   {
