Added channels arg to SphereNN py script

--- a/notebooks/SphereNN Development.ipynb
+++ b/notebooks/SphereNN Development.ipynb
@@ -445,7 +445,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating data for TEST!\n"
+      "Generating data for TEST!\n",
+      "Training on Q1 data:\n",
+      "Generating data for Q1!\n"
      ]
     }
    ],
