--- a/notebooks/SphereNN Development.ipynb
+++ b/notebooks/SphereNN Development.ipynb
@@ -797,7 +797,9 @@
      "output_type": "stream",
      "text": [
       "Processing Q2 data\n",
-      "Generating data for Q2!\n"
+      "Generating data for Q2!\n",
+      "Processing Q3 data\n",
+      "Generating data for Q3!\n"
      ]
     }
    ],
